fix: overlays visible through page loader

--- a/components/page-loader.module.css
+++ b/components/page-loader.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    z-index: 3;
+    z-index: 10000;
     background-color: var(--background-color);
     width: 100vw;
     height: 100vh;
